--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 </span>
                             </a>
                             <ul class="about_item">
-                                <li><a href="#about">about me</a>
+                                <li><a href="./about.html#about">about me</a>
                                 </li>
                             </ul>
                         </li>
@@ -61,7 +61,7 @@
                     <li> <a href="#home">ホーム<br>HOME</a></li>
                     <ul>
                         <li class="header_about_item">
-                            <a href="#about">私について<br>ABOUT<span class="header_about_arrow">
+                            <a href="#about">私について<br>ABOUT<span class="sp_header_about_arrow">
                                 </span>
                             </a>
                             <ul class="about_item">
@@ -73,7 +73,7 @@
                     <li><a href="#skill">スキル<br>SKILL</a></li>
                     <ul class="works_menu">
                         <li class="header_works_item">
-                            <a href="#works">制作実績<br>WORKS<span class="header_works_arrow">
+                            <a href="#works">制作実績<br>WORKS<span class="sp_header_works_arrow">
                                 </span>
                             </a>
                             <ul class="works_item">
@@ -82,8 +82,8 @@
                             </ul>
                         </li>
                     </ul>
-                    <li class="header_contact"><a href="#contact"><img src="./images/sp_mail_icon.svg" alt="アイコン"
-                                class="button-icon">お問合せ<br>CONTACT</a></li>
+                    <li class="sp_header_contact"><a href="#contact"><img src="./images/sp_mail_icon.svg" alt="アイコン"
+                                class="sp_button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
 
@@ -435,14 +435,30 @@
         })
         $(function () {
             $('.HeaderMenu_spnav a').on('click', function () {
-                $('.HeaderMenu_spnav a').toggleClass('open');
+                $('.sp_btn').removeClass('open');
                 $('.HeaderMenu_spnav').fadeOut()
             })
-            $('sp_btn').on('click', function () {
-                $('sp_btn').off('open');
-
-            })
         })
+        $(function () {
+            // ハンバーガーメニューボタンがクリックされたときのイベントハンドラを設定
+            $(".sp_btn").click(function () {
+
+                // 現在のbodyタグのoverflowスタイルを確認
+                if ($("body").css("overflow") === "hidden") {
+
+                    // もしoverflowがhiddenなら、bodyのスタイルを元に戻す
+                    $("body").css({ height: "", overflow: "" });
+
+                } else {
+
+                    // そうでなければ、bodyにheight: 100%とoverflow: hiddenを設定し、スクロールを無効にする
+                    $("body").css({ height: "100%", overflow: "hidden" });
+
+                }
+            });
+        });
+
+
 
 
 
