--- a/works.html
+++ b/works.html
@@ -20,7 +20,9 @@
     <header>
         <div class="Header">
             <h1 class="header_logo">
-                <img src="./images/chiho_logo.svg" alt="チホデザインロゴ">
+                <a href="./index.html">
+                    <img src="./images/chiho_logo.svg" alt="チホデザインロゴ">
+                </a>
             </h1>
             <nav class="HeaderMenu_pcnav">
                 <ul>
@@ -96,7 +98,7 @@
                 <br>長岡千穂 portfolio
                 <div class="works_img"><a href="./works_3.html"><img src="./images/portfolio.png" alt=""></a></div>
             </div>
-            <div class="works">
+            <div class="works works_resize">
                 <span>Website</span>
                 <span class="works_separator"></span>
                 <span>Design</span>
@@ -152,6 +154,7 @@
             </nav>
         </div>
         <p>© 2024 CHIHO DESIGN All rights reserved.</p>
+        <p id="page-top"><a href="#">TOP</a></p>
     </footer>
     <script>
         $(document).ready(function () {
@@ -160,6 +163,15 @@
                 infinite: true,
                 speed: 500,
                 slidesToShow: 3,
+                slidesToScroll: 1
+            });
+        });
+        $(document).ready(function () {
+            $('.sp_works_photo').slick({
+                dots: true,
+                infinite: true,
+                speed: 500,
+                slidesToShow: 1,
                 slidesToScroll: 1
             });
         });
@@ -200,23 +212,19 @@
                     }
                 })
             });
-            $(function () {
-                $('.sp_btn').on('click', function () {
-                    $('.sp_btn').toggleClass('open');
-                    $('.HeaderMenu_spnav').fadeToggle()
-                })
-            })
-            $(function () {
-                $('.HeaderMenu_spnav a').on('click', function () {
-                    $('.HeaderMenu_spnav a').toggleClass('open');
-                    $('.HeaderMenu_spnav').fadeOut()
-                })
-                $('sp_btn').on('click', function () {
-                    $('sp_btn').off('open');
-
-                })
-            })
         });
+        $(function () {
+            $('.sp_btn').on('click', function () {
+                $('.sp_btn').toggleClass('open');
+                $('.HeaderMenu_spnav').fadeToggle()
+            })
+        })
+        $(function () {
+            $('.HeaderMenu_spnav a').on('click', function () {
+                $('.sp_btn').removeClass('open');
+                $('.HeaderMenu_spnav').fadeOut()
+            })
+        })
         $(function () {
             // ハンバーガーメニューボタンがクリックされたときのイベントハンドラを設定
             $(".sp_btn").click(function () {
@@ -235,8 +243,110 @@
                 }
             });
         });
+        $(function () {
+            var pagetop = $('#page-top');
+            pagetop.hide();
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 100) {
+                    pagetop.fadeIn();
+                } else {
+                    pagetop.fadeOut();
+                }
+            });
+            pagetop.click(function () {
+                $('body, html').animate({ scrollTop: 0 }, 500);
+                return false;
+            });
+        });
     </script>
 
+</body>
+
+</html>
+</footer>
+<script>
+    $(document).ready(function () {
+        $('.works_photo').slick({
+            dots: true,
+            infinite: true,
+            speed: 500,
+            slidesToShow: 3,
+            slidesToScroll: 1
+        });
+    });
+
+    $(function () {
+        //クリックで要素を表示
+        $('.header_about_item').click(function () {
+            $('.about_item').fadeToggle();
+        })
+    });
+    $(function () {
+        //クリックで要素を表示
+        $('.header_works_item').click(function () {
+            $('.works_item').fadeToggle();
+        })
+    });
+
+    $(function () {
+        // ウィンドウをスクロールしたら…
+        $(window).scroll(function () {
+            // ウィンドウの高さを取得
+            const wHeight = $(window).height();
+            // スクロールした量を取得
+            const wScroll = $(window).scrollTop();
+            // それぞれのblockクラスに対して…
+            $(".line").each(function () {
+                // それぞれのblockクラスのウィンドウからの高さを取得
+                const bPosition = $(this).offset().top;
+                // スクロールした量が要素の高さを上回ったら
+                // その数値にウィンドウの高さを引き、最後に200pxを足す
+                if (wScroll > bPosition - wHeight + 200) {
+                    $(this).addClass("fadeIn");
+                }
+            });
+            $(".scroll_circle").each(function () {
+                if ((wScroll + wHeight) > $(this).offset().top) {
+                    $(this).addClass('is-show');
+                }
+            })
+        });
+        $(function () {
+            $('.sp_btn').on('click', function () {
+                $('.sp_btn').toggleClass('open');
+                $('.HeaderMenu_spnav').fadeToggle()
+            })
+        })
+        $(function () {
+            $('.HeaderMenu_spnav a').on('click', function () {
+                $('.HeaderMenu_spnav a').toggleClass('open');
+                $('.HeaderMenu_spnav').fadeOut()
+            })
+            $('sp_btn').on('click', function () {
+                $('sp_btn').off('open');
+
+            })
+        })
+    });
+    $(function () {
+        // ハンバーガーメニューボタンがクリックされたときのイベントハンドラを設定
+        $(".sp_btn").click(function () {
+
+            // 現在のbodyタグのoverflowスタイルを確認
+            if ($("body").css("overflow") === "hidden") {
+
+                // もしoverflowがhiddenなら、bodyのスタイルを元に戻す
+                $("body").css({ height: "", overflow: "" });
+
+            } else {
+
+                // そうでなければ、bodyにheight: 100%とoverflow: hiddenを設定し、スクロールを無効にする
+                $("body").css({ height: "100%", overflow: "hidden" });
+
+            }
+        });
+    });
+</script>
 </body>
 
 </html>
