--- a/thanks.html
+++ b/thanks.html
@@ -20,7 +20,9 @@
     <header>
         <div class="Header">
             <h1 class="header_logo">
-                <img src="./images/chiho_logo.svg" alt="チホデザインロゴ">
+                <a href="./index.html">
+                    <img src="./images/chiho_logo.svg" alt="チホデザインロゴ">
+                </a>
             </h1>
             <nav class="HeaderMenu_pcnav">
                 <ul>
@@ -46,7 +48,119 @@
             </button>
         </div>
         <p>© 2024 CHIHO DESIGN All rights reserved.</p>
-    </section>
+        <p id="page-top"><a href="#">TOP</a></p>
+        </footer>
+        <script>
+            $(document).ready(function () {
+                $('.works_photo').slick({
+                    dots: true,
+                    infinite: true,
+                    speed: 500,
+                    slidesToShow: 3,
+                    slidesToScroll: 1
+                });
+            });
+            $(document).ready(function () {
+                $('.sp_works_photo').slick({
+                    dots: true,
+                    infinite: true,
+                    speed: 500,
+                    slidesToShow: 1,
+                    slidesToScroll: 1
+                });
+            });
+
+            $(function () {
+                //クリックで要素を表示
+                $('.header_about_item').click(function () {
+                    $('.about_item').fadeToggle();
+                })
+            });
+            $(function () {
+                //クリックで要素を表示
+                $('.header_works_item').click(function () {
+                    $('.works_item').fadeToggle();
+                })
+            });
+
+            $(function () {
+                // ウィンドウをスクロールしたら…
+                $(window).scroll(function () {
+                    // ウィンドウの高さを取得
+                    const wHeight = $(window).height();
+                    // スクロールした量を取得
+                    const wScroll = $(window).scrollTop();
+                    // それぞれのblockクラスに対して…
+                    $(".line").each(function () {
+                        // それぞれのblockクラスのウィンドウからの高さを取得
+                        const bPosition = $(this).offset().top;
+                        // スクロールした量が要素の高さを上回ったら
+                        // その数値にウィンドウの高さを引き、最後に200pxを足す
+                        if (wScroll > bPosition - wHeight + 200) {
+                            $(this).addClass("fadeIn");
+                        }
+                    });
+                    $(".scroll_circle").each(function () {
+                        if ((wScroll + wHeight) > $(this).offset().top) {
+                            $(this).addClass('is-show');
+                        }
+                    })
+                });
+            });
+            $(function () {
+                $('.sp_btn').on('click', function () {
+                    $('.sp_btn').toggleClass('open');
+                    $('.HeaderMenu_spnav').fadeToggle()
+                })
+            })
+            $(function () {
+                $('.HeaderMenu_spnav a').on('click', function () {
+                    $('.sp_btn').removeClass('open');
+                    $('.HeaderMenu_spnav').fadeOut()
+                })
+            })
+            $(function () {
+                // ハンバーガーメニューボタンがクリックされたときのイベントハンドラを設定
+                $(".sp_btn").click(function () {
+
+                    // 現在のbodyタグのoverflowスタイルを確認
+                    if ($("body").css("overflow") === "hidden") {
+
+                        // もしoverflowがhiddenなら、bodyのスタイルを元に戻す
+                        $("body").css({ height: "", overflow: "" });
+
+                    } else {
+
+                        // そうでなければ、bodyにheight: 100%とoverflow: hiddenを設定し、スクロールを無効にする
+                        $("body").css({ height: "100%", overflow: "hidden" });
+
+                    }
+                });
+            });
+            $(function () {
+                var pagetop = $('#page-top');
+                pagetop.hide();
+                $(window).scroll(function () {
+                    if ($(this).scrollTop() > 100) {
+                        pagetop.fadeIn();
+                    } else {
+                        pagetop.fadeOut();
+                    }
+                });
+                pagetop.click(function () {
+                    $('body, html').animate({ scrollTop: 0 }, 500);
+                    return false;
+                });
+            });
+
+
+
+
+
+
+
+
+        </script>
 
 </body>
 
