--- a/works.html
+++ b/works.html
@@ -50,22 +50,32 @@
             </div>
             <nav class="HeaderMenu_spnav">
                 <ul class="about_menu">
-                    <li> <a href="./index.html#home">ホーム<br>HOME</a></li>
+                    <li> <a href="#home">ホーム<br>HOME</a></li>
                     <ul>
-                        <li class="header_about_item">
-                            <a href="./index.html#about">私について<br>ABOUT
+                        <li class="sp_header_about_item ">
+                            <a href="#about">私について<br>ABOUT<span class="sp_header_about_arrow">
+                                </span>
                             </a>
+                            <ul compact="sp_about_item">
+                                <li class=" sp_about_me"><a href="./about.html">about me</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
-                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li><a href="#skill">スキル<br>SKILL</a></li>
                     <ul class="works_menu">
                         <li class="header_works_item">
-                            <a href="./index.html#works">制作実績<br>WORKS
+                            <a href="#works">制作実績<br>WORKS<span class="sp_header_works_arrow">
+                                </span>
                             </a>
+                            <ul class="sp_works_item">
+                                <li class="sp_works_more"><a href="./works.html"> Works more</a>
+                                </li>
+                            </ul>
                         </li>
                     </ul>
-                    <li class="sp_header_contact"><a href="./index.html#contact"><img src="./images/sp_mail_icon.svg"
-                                alt="アイコン" class="sp_button-icon">お問合せ<br>CONTACT</a></li>
+                    <li class="sp_header_contact"><a href="#contact"><img src="./images/sp_mail_icon.svg" alt="アイコン"
+                                class="sp_button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
@@ -133,7 +143,8 @@
                 <span class="works_separator"></span>
                 <span>Design</span>
                 <br>トラベルメディア「TRRRRIP」バナー（架空）
-                <div class="works_img square"><a href="./works_8.html"><img src="./images/trrrrip.jpg" alt=""></a></div>
+                <div class="works_img square"><a href="./works_8.html"><img class="works_travel"
+                            src="./images/trrrrip.jpg" alt=""></a></div>
             </div>
         </div>
     </section>
@@ -175,7 +186,6 @@
                 slidesToScroll: 1
             });
         });
-
         $(function () {
             //クリックで要素を表示
             $('.header_about_item').click(function () {
@@ -258,95 +268,25 @@
                 return false;
             });
         });
-    </script>
-
-</body>
-
-</html>
-</footer>
-<script>
-    $(document).ready(function () {
-        $('.works_photo').slick({
-            dots: true,
-            infinite: true,
-            speed: 500,
-            slidesToShow: 3,
-            slidesToScroll: 1
-        });
-    });
-
-    $(function () {
-        //クリックで要素を表示
-        $('.header_about_item').click(function () {
-            $('.about_item').fadeToggle();
-        })
-    });
-    $(function () {
-        //クリックで要素を表示
-        $('.header_works_item').click(function () {
-            $('.works_item').fadeToggle();
-        })
-    });
-
-    $(function () {
-        // ウィンドウをスクロールしたら…
-        $(window).scroll(function () {
-            // ウィンドウの高さを取得
-            const wHeight = $(window).height();
-            // スクロールした量を取得
-            const wScroll = $(window).scrollTop();
-            // それぞれのblockクラスに対して…
-            $(".line").each(function () {
-                // それぞれのblockクラスのウィンドウからの高さを取得
-                const bPosition = $(this).offset().top;
-                // スクロールした量が要素の高さを上回ったら
-                // その数値にウィンドウの高さを引き、最後に200pxを足す
-                if (wScroll > bPosition - wHeight + 200) {
-                    $(this).addClass("fadeIn");
-                }
-            });
-            $(".scroll_circle").each(function () {
-                if ((wScroll + wHeight) > $(this).offset().top) {
-                    $(this).addClass('is-show');
-                }
-            })
-        });
-        $(function () {
-            $('.sp_btn').on('click', function () {
-                $('.sp_btn').toggleClass('open');
-                $('.HeaderMenu_spnav').fadeToggle()
-            })
-        })
         $(function () {
             $('.HeaderMenu_spnav a').on('click', function () {
-                $('.HeaderMenu_spnav a').toggleClass('open');
-                $('.HeaderMenu_spnav').fadeOut()
-            })
-            $('sp_btn').on('click', function () {
-                $('sp_btn').off('open');
+                if ($("body").css("overflow") === "hidden")
 
+                    // もしoverflowがhiddenなら、bodyのスタイルを元に戻す
+                    $("body").css({ height: "", overflow: "" });
             })
+
         })
-    });
-    $(function () {
-        // ハンバーガーメニューボタンがクリックされたときのイベントハンドラを設定
-        $(".sp_btn").click(function () {
 
-            // 現在のbodyタグのoverflowスタイルを確認
-            if ($("body").css("overflow") === "hidden") {
 
-                // もしoverflowがhiddenなら、bodyのスタイルを元に戻す
-                $("body").css({ height: "", overflow: "" });
 
-            } else {
 
-                // そうでなければ、bodyにheight: 100%とoverflow: hiddenを設定し、スクロールを無効にする
-                $("body").css({ height: "100%", overflow: "hidden" });
 
-            }
-        });
-    });
-</script>
+
+
+
+    </script>
+
 </body>
 
 </html>
