--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <li><a href="#about">私について<br>ABOUT</a></li>
                     <li><a href="#skill">スキル<br>SKILL</a></li>
                     <li><a href="#works">制作実績<br>WORKS</a></li>
-                    <li class="sp_header_contact"><a href="#contact"><img src="./images/sp_mail_icon.svg" alt="アイコン"
+                    <li class="sp_header_contact"><a href="#contact"><img src="./images/mail_icon.svg" alt="アイコン"
                                 class="sp_button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
