--- a/thanks.html
+++ b/thanks.html
@@ -34,6 +34,20 @@
                                 alt="アイコン" class="button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
+            <div class="sp_btn ">
+                <span></span>
+                <p>menu</p>
+            </div>
+            <nav class="HeaderMenu_spnav">
+                <ul class="about_menu">
+                    <li> <a href="#home">ホーム<br>HOME</a></li>
+                    <li><a href="#about">私について<br>ABOUT</a></li>
+                    <li><a href="#skill">スキル<br>SKILL</a></li>
+                    <li><a href="#works">制作実績<br>WORKS</a></li>
+                    <li class="sp_header_contact"><a href="#contact"><img src="./images/mail_icon.svg" alt="アイコン"
+                                class="sp_button-icon">お問合せ<br>CONTACT</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <section id="thanks" class="thanks">
