--- a/thanks.html
+++ b/thanks.html
@@ -40,12 +40,12 @@
             </div>
             <nav class="HeaderMenu_spnav">
                 <ul class="about_menu">
-                    <li> <a href="#home">ホーム<br>HOME</a></li>
-                    <li><a href="#about">私について<br>ABOUT</a></li>
-                    <li><a href="#skill">スキル<br>SKILL</a></li>
-                    <li><a href="#works">制作実績<br>WORKS</a></li>
-                    <li class="sp_header_contact"><a href="#contact"><img src="./images/mail_icon.svg" alt="アイコン"
-                                class="sp_button-icon">お問合せ<br>CONTACT</a></li>
+                    <li> <a href="./index.html#home">ホーム<br>HOME</a></li>
+                    <li><a href="./index.html#about">私について<br>ABOUT</a></li>
+                    <li><a href="./index.html#skill">スキル<br>SKILL</a></li>
+                    <li><a href="./index.html#works">制作実績<br>WORKS</a></li>
+                    <li class="sp_header_contact"><a href="./index.html#contact"><img src="./images/mail_icon.svg"
+                                alt="アイコン" class="sp_button-icon">お問合せ<br>CONTACT</a></li>
                 </ul>
             </nav>
         </div>
