--- a/works.html
+++ b/works.html
@@ -100,8 +100,8 @@
                 <span class="works_separator"></span>
                 <span>Design</span>
                 <br>ハンバーガーバナー Richver.（架空）
-                <div class="works_img square"><a href="./works_5.html"><img src="./images/burger_Rich2-2.png"
-                            alt=""></a></div>
+                <div class="works_img square"><a href="./works_5.html"><img class="works_burger"
+                            src="./images/burger_Rich2-2.png" alt=""></a></div>
             </div>
             <div class="works">
                 <span>Webbanner</span>
